# ncurses-snake

./: CMakeLists.txt  README.md  main.cpp  snake.cpp  snake.h
